[package]
name = "anki-oxford"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
reqwest = "0.12.25"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5.7"
